--- a/Web.config
+++ b/Web.config
@@ -26,4 +26,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+	<appSettings>
+		<add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
+	</appSettings>
 </configuration>
